--- a/views/home.ejs
+++ b/views/home.ejs
@@ -30,55 +30,79 @@
 		</div>
 	</section>
 	<article>
-		<section class="section section-companies red has-top">
+		<section id ="skills" class="section section-companies red has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container skill">
 				<header class="section-header small text-center underline">
 					<h1 class="headline text-large hairline xsmall-margin-bottom">Skills</h1>
 				</header>
-				<div class="row large-margin-top">
-					<div class="col-md-10 center">
-						<div id="feature_1_text" class="col-md-5">
+				<div class="row medium-margin-top">
+					<div class="col-lg-10 center">
+						<div id="feature_1_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Design</h1>
-								<p class="body-subheader features">Create stunning visualizations by applying designer or newly created palettes to your roadmap, providing the deepest impact to your audience.</p>
+								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it. Simply put Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably Brent has worked on:</p>
+								<ul>
+									<li>Completely customized website design - special emphasis on responsive development</li>
+									<li>Custom email templates, logos, and icons</li>
+									<li>Graphic designs for adertisments, &#38; interactive PDF's, and website</li>
+								</ul>
 							</header>
 						</div>
-						<div id="feature_1_img" class="col-md-6 features-right features-text-right">
-							<img src="/images/color-palette.png" itemprop="screenshot" alt="Software for creating roadmaps with designer palettes">
+						<div id="feature_1_img" class="col-md-4 features-right features-text-right">
+							<img src="/images/utensils.svg" width="300" height="300" itemprop="screenshot" alt="Software for creating roadmaps with designer palettes">
 						</div>
 					</div>
 				</div>
-				<div class="row large-margin-top">
-					<div class="col-md-10 center">
-						<div id="feature_2_text" class="col-md-5 features-right">
+				<div class="row xsmall-margin-top">
+					<div class="col-lg-10 center">
+						<div id="feature_2_text" class="col-md-7 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Development</h1>
-								<p class="body-subheader features">There is no need to move pixels on slides with our direct export to presentation formats. Select your aspect ratio (4:3, 16:9, 16:10) and download your roadmap in a presentation-ready format (PPT, PNG, PDF, HTML).</p>
+								<p class="body-subheader features">Current studying for a degree in Honours Computer Science Brent is immersed in a development environment day in an day out. Other than work experience discussed in Brent's r&#233;sum&#233;.&#58;</p>
+								<ul>
+									<li>
+										<a href="http://easybadge.herokuapp.com/">
+											EasyBadge
+										</a>via PHP
+									</li>
+									<li>
+										<a href="http://labs.schybo.com/roygbiv/">Roygbiv</a>
+										&#38;
+										<a href="http://labs.schybo.com/blur/">Blur</a>
+										via NodeJS, Javascript &#38; CSS3</li>
+									<li><a href="https://github.com/bscheibe/cacheController">CacheController</a> via BASH</li>
+								</ul>
 							</header>
 						</div>
-						<div id="feature_2_img" class="col-md-6 features-text-left">
-							<img src="/images/fit-to-powerpoint.png" itemprop="screenshot" alt="Presentation ready roadmaps with our roadmapping software">
+						<div id="feature_2_img" class="col-md-4 features-text-left">
+							<img src="/images/development.svg" width="300" height="300" itemprop="screenshot" alt="Presentation ready roadmaps with our roadmapping software">
 						</div>
 					</div>
 				</div>
-				<div class="row large-margin-top">
-					<div class="col-md-10 center">
-						<div id="feature_3_text" class="col-md-5">
+				<div class="row xsmall-margin-top">
+					<div class="col-lg-10 center">
+						<div id="feature_3_text" class="col-md-7">
 							<header class="small-header features-text-left">
-								<h1 class="headline text-small hairline">Marketing</h1>
-								<p class="body-subheader features">Your audience can view the latest roadmap status and details by interacting with an HTML version of the roadmap, published as a private URL.</p>
+								<h1 class="headline text-small hairline">SEO &#38; Marketing</h1>
+								<p class="body-subheader features">Both of Brent's co-ops, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing from email drops to SEO. Brent can help with:</p>
+								<ul>
+									<li>Itelligent funnel campaigns set up from experience</li>
+									<li>Harnessing the power of social media to engage customers</li>
+									<li>Email drops, targeted advertisement, copy writing &#38; search engine optimization</li>
+									<li>Analytics - especially Google Analytics and KISSMetrics</li>
+								</ul>
 							</header>
 						</div>
-						<div id="feature_3_img" class="col-md-6 features-right features-text-right">
-							<img src="/images/publish-to-url.png" itemprop="screenshot" alt="Share product roadmaps with audience">
+						<div id="feature_3_img" class="col-md-4 features-right features-text-right">
+							<img src="/images/bullet.svg" width="300" height="300" itemprop="screenshot" alt="Share product roadmaps with audience">
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="section section-companies green has-top">
+		<section id="companies" class="section section-companies green has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -121,7 +145,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section section-normal purple has-top">
+		<section id="testimonials" class="section section-normal purple has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
@@ -188,182 +212,6 @@
 				</blockquote>
 			</div>
 		</section>
-		<!--<section class="section section-short has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container">
-				<header class="section-header small text-center underline">
-					<h1 class="headline text-large hairline xsmall-margin-bottom">How It Works</h1>
-				</header>
-				<div class="row">
-					<div class="col-md-12 text-default">
-						<div class="row">
-							<ul class="list-unstyled image-list">
-								<li class="col-md-4 small-margin-top">-->
-									<!--<img src="/images/icon-clock-cogs.png" width="200" height="200" alt="Quickly Create Roadmap">-->
-									<!--<span class="init-clock">
-										<img src="/images/animations/icon-clock-cogs-no-hands2.png" width="200" height="200">
-										<img class="clock-hand" src="/images/animations/icon-clock-hand.png" height="3.5px">
-										<img class="hour-clock-hand" src="/images/animations/icon-hour-clock-hand.png" width="6px">
-									</span>
-									<div class="row">
-										<div class="col-md-10 center">
-											<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
-										</div>
-									</div>
-								</li>
-								<li class="col-md-4 small-margin-top">
-									<img class="home-svg" src="/images/pencils.svg" alt="Tools to design roadmap in minutes" width="165" height="165">
-									<div class="row">
-										<div class="col-md-10 center">
-											<h3 class="text-center font-normal text-get-smaller">Color And style to match your brand</h3>
-										</div>
-									</div>
-								</li>
-								<li class="col-md-4 small-margin-top">-->
-									<!--<img src="/images/icon-imac-roadmap.png" alt="Presentation ready roadmap" width="200" height="200">-->
-									<!--<span class="init-dl">
-										<img src="/images/icon-imac-roadmap.png" width="200" height="200">
-										<span class="glyphicon glyphicon-arrow-down download"></span>
-									</span>
-									<div class="row">
-										<div class="col-md-12 center">
-											<h3 class="text-center font-normal text-get-smaller">Download your presentation-ready roadmap</h3>
-										</div>
-									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
-						<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-							<div class="cta free-trial center"></div>
-						</a>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="section section-normal has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container-fluid">
-				<header class="section-header text-center underline medium-margin-bottom">
-					<h1 class="headline text-medium hairline xsmall-margin-bottom">Roadmaps Of All Types</h1>
-				</header>
-				<div class="row">
-					<div class="col-md-10 center">
-						<div class="row">
-							<div class="col-md-8">
-								<div class="browser">
-									<img class="bg" src="/images/browser-roadmunk.jpg">
-									<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap.png" itemprop="screenshot" alt="Sprint Product Roadmap">
-									<img id="projectImg" class="screen" src="/images/project-roadmap.png" alt="Project Roadmap for Product Managers">
-									<img id="releaseImg" class="screen" src="/images/release-roadmap.png" alt="Release Roadmap">
-								</div>
-							</div>
-							<div class="col-md-4">
-								<ul class="list-unstyled feature-controls">
-									<li id="sprint" class="selected">
-										<span >
-											<div class="roadmap-icon sprint">
-												<span class="glyphicon glyphicon-flash"></span>
-											</div>
-											<span class="info">
-												<h3>Sprint Roadmap</h3>
-												<p class="callout">Create your short term roadmap to visualize your upcoming sprints</p>
-											</span>
-										</a>
-									</li>
-									<li id="project">
-										<span>
-											<div class="roadmap-icon project">
-												<span class="glyphicon glyphicon-briefcase"></span>
-											</div>
-											<span class="info">
-												<h3>Project Roadmap</h3>
-												<p class="callout">Provide vital status updates to your stakeholders</p>
-											</span>
-										</a>
-									</li>
-									<li id="release">
-										<span>
-											<div class="roadmap-icon release">
-												<span class="glyphicon glyphicon-globe"></span>
-											</div>
-											<span class="info">
-												<h3>Release Roadmap</h3>
-												<p class="callout">Plan out your long term releases across multiple product lines</p>
-											</span>
-										</span>
-									</li>
-								</ul>
-								<div class="row">
-									<div class="col-md-10 xsmall-margin-top small-margin-bottom center">
-										<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-											<div class="cta small-cta center"></div>
-										</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="section section-short has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container-fluid features">
-				<header class="section-header small text-center underline">
-					<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
-				</header>
-				<div class="row">
-					<div class="col-md-10 center">
-						<div class="row">
-							<ul class="list-unstyled row image-list">
-								<li class="col-md-3 small-margin-top">
-									<img src="/images/binder.svg" width="225" height="225" alt="Slick Tools to help create perfect product roadmap">
-									<h3 class="text-center font-normal">Idea Management</h3>
-									<div class="col-sm-10 center">
-										<p class="callout">Import, create and priortize items in a slick UI.</p>
-									</div>
-								</li>
-								<li class="col-md-3 small-margin-top">
-									<img src="/images/microscope.svg" width="225" height="225" alt="Custom Roadmap View with drag and drop tools">
-									<h3 class="text-center font-normal">Custom Roadmap Views</h3>
-									<div class="col-sm-10 center">
-										<p class="callout">Single-click creation and powerful drag-and-drop tools.</p>
-									</div>
-								</li>
-								<li class="col-md-3 small-margin-top">
-									<img src="/images/utensils.svg" width="225" height="225" alt="Custom software with branding tools for product roadmaps">
-									<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
-									<div class="col-sm-10 center">
-										<p class="callout">Create the deep impact on your audience.</p>
-									</div>
-								</li>
-								<li class="col-md-3 small-margin-top">
-									<img src="/images/bullet.svg" width="225" height="225">
-									<h3 class="text-center font-normal">Fit to PowerPoint</h3>
-									<div class="col-sm-10 center">
-										<p class="callout">Stop moving pixels around on a slide. Export directly to PowerPoint.</p>
-									</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="row">
-					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
-						<a title="Learn more about Roadmunk" href="/features">
-							<div class="cta learn-more center"></div>
-						</a>
-					</div>
-				</div>
-				</div>
-			</div>
-		</section>-->
 		<section class="section section-normal yellow has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
@@ -384,53 +232,6 @@
 				</div>
 			</div>
 		</section>
-		<!--<section class="section section-short has-top">
-			<div class="decor-top">
-				<% include ./partials/top-triangle-angle %>
-			</div>
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container">
-				<header class="section-header text-center underline">
-					<h1 class="headline text-large xsmall-margin-bottom hairline">Our Clients</h1>
-				</header>
-				<div class="row medium-margin-bottom">
-					<div class="col-md-12">
-						<ul class="list-unstyled row image-list">
-							<li class="col-md-3">
-								<img src="http://placehold.it/150x150">
-							</li>
-							<li class="col-md-3">
-								<img src="http://placehold.it/150x150">
-							</li>
-							<li class="col-md-3">
-								<img src="http://placehold.it/150x150">
-							</li>
-							<li class="col-md-3">
-								<img src="http://placehold.it/150x150">
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</section>-->
-		<!--<section class="section section-normal has-top">
-			<div class="background-media"></div>
-			<div class="background-overlay"></div>
-			<div class="container">
-				<header class="section-header text-center underline">
-					<h1 class="headline text-medium hairline">See Roadmunk In Action</h1>
-					<p class="get-smaller">Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
-				</header>
-				<div class="row">
-					<div class="col-lg-12 xsmall-margin-top">
-						<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
-							<div class="cta general center"></div>
-						</a>
-					</div>
-				</div>
-			</div>
-		</section>-->
 	</article>
 </div>
 <% include end %>
