--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer">
 	<div class="row">
 		<div class="column">
-			<h4>About Roadmunk</h4>
+			<h4>About Brent</h4>
 			<ol>
 				<li class="nav-item">
 					<a href="/blog" title="Blog">
@@ -10,12 +10,12 @@
 				</li>
 				<li class="nav-item">
 					<a href="/company" title="Contact Us">
-						Contact Us
+						Contact
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/style-guide" title="Style Guide">
-						Style Guide
+					<a href="#" title="LinkedIn">
+						Linked In
 					</a>
 				</li>
 			</ol>
@@ -29,21 +29,23 @@
 					</a>
 				</li>-->
 				<li class="nav-item">
-					<a href="https://roadmunk.zendesk.com/hc/en-us" title="FAQ">
-						FAQ
+					<a href="#" title="Style Guide">
+						Style Guide
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="/terms-and-conditions" title="Terms And Conditions">
-						Terms and Conditions
+					<a href="#" title="Dribbble">
+						Dribbble
 					</a>
 				</li>
 				<li class="nav-item">
-					&nbsp;
+					<a href="#" title="Github">
+						Github
+					</a>
 				</li>
 			</ol>
 		</div>
-		<div class="column">
+		<!--<div class="column">
 			<h4>Helpful Links</h4>
 			<ol>
 				<li class="nav-item">
@@ -62,7 +64,7 @@
 					</a>
 				</li>
 			</ol>
-		</div>
+		</div>-->
 		<div class="column">
 			<h4>Social</h4>
 			<ol>
@@ -77,8 +79,8 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a href="http://www.linkedin.com/company/roadmunk" title="Linked In">
-						Linked In
+					<a href="#" title="Facebook">
+						Facebook
 					</a>
 				</li>
 			</ol>
@@ -86,25 +88,10 @@
 	</div>
 	<div class="copyright-info">
 		<div class="info-left">
-			&#169;2012&#45;2014 Roadmunk
-			&nbsp;&#183;&nbsp;
-			<a href="/terms-and-conditions" title="Terms And Conditions">
-				Terms And Conditions
-			</a>
-			&nbsp;&#183;&nbsp;
-			<a href="/privacy-policy" title="Privacy Policy">
-				Privacy Policy
-			</a>
-			&nbsp;&#183;&nbsp;
-			<a href="/security" title="Security">
-				Security
-			</a>
+			&#169;2012&#45;2014 Brent Scheibelhut
 		</div>
 		<div class="info-right">
-			<a class="dmz" href="http://digitalmediazone.ryerson.ca/" title="Digital Media Zone">
-				<img src="/images/dmz-footer.png" alt="Digital Media Zone" height="22px">
-			</a>
-			<a href="mailto:support@roadmunk.com?Subject=Support%20Case" title="Support">support&#64;roadmunk.com</a>
+			<a href="mailto:brent@scheibelhut.com?Subject=Support%20Case" title="Support">brent&#64;scheibelhut.com</a>
 		</div>
 	</div>
 </footer>
