--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,11 +15,11 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="featuresNav" title="Features" href="/features">Features</a></li>
-        <!--<li><a title="Pricing" href="/pricing">Pricing</a></li>-->
-        <li><a id="blogNav" title="Blog" href="/blog">Blog</a></li>
-        <li><a id="companyNav" title="Company" href="/company">Contact</a></li>
-         <li><a title="Company" href="https://app.roadmunk.com/login/#/signup">Sign Up</a></li>
+        <li><a id="featuresNav" title="Features" href="#skills">Skills</a></li>
+        <li><a title="Pricing" href="#companies">Companies</a></li>
+        <li><a id="blogNav" title="Blog" href="#testimonials">Testimonials</a></li>
+         <li><a title="Company" href="#">Other</a></li>
+         <!-- contaact -->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
