Fixed Up Text and SEO

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,10 +14,10 @@
 					</header>
 					<div class="row">
 						<div class="col-lg-12 small-margin-bottom">
-							<a title="Create my roadmap for free" href="#">
+							<a title="Hire Me" href="#">
 								<button class="cta2 hire blue1"></button>
 							</a>
-							<a title="Create my roadmap for free" href="#">
+							<a title="Contact Info" href="#">
 								<button class="cta2 contact blue2 xsmall-margin-left"></button>
 							</a>
 						</div>
@@ -51,7 +51,7 @@
 							</header>
 						</div>
 						<div id="feature_1_img" class="col-md-4 features-right features-text-right">
-							<img src="/images/utensils.svg" width="300" height="300" itemprop="screenshot" alt="Software for creating roadmaps with designer palettes">
+							<img src="/images/utensils.svg" width="300" height="300" alt="Design">
 						</div>
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 							</header>
 						</div>
 						<div id="feature_2_img" class="col-md-4 features-text-left">
-							<img src="/images/development.svg" width="300" height="300" itemprop="screenshot" alt="Presentation ready roadmaps with our roadmapping software">
+							<img src="/images/development.svg" width="300" height="300" alt="Developement">
 						</div>
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 							</header>
 						</div>
 						<div id="feature_3_img" class="col-md-4 features-right features-text-right">
-							<img src="/images/bullet.svg" width="300" height="300" itemprop="screenshot" alt="Share product roadmaps with audience">
+							<img src="/images/bullet.svg" width="300" height="300" alt="SEO and Marketing">
 						</div>
 					</div>
 				</div>
@@ -158,7 +158,9 @@
 							<div class="box-round box-huge">
 								<div class="box-dummy"></div>
 								<div class="box-inner">
-									<img src="/images/latif.png">
+									<a href="https://www.linkedin.com/profile/view?id=11534593">
+										<img src="/images/latif.png" alt="Latif Nanji">
+									</a>
 								</div>
 							</div>
 						</div>
@@ -180,7 +182,9 @@
 							<div class="box-round box-huge">
 								<div class="box-dummy"></div>
 								<div class="box-inner">
-									<img src="/images/sam.png">
+									<a href="https://www.linkedin.com/profile/view?id=22700749">
+										<img src="/images/sam.png" alt="Sam Mednick">
+									</a>
 								</div>
 							</div>
 						</div>
@@ -192,7 +196,9 @@
 							<div class="box-round box-huge">
 								<div class="box-dummy"></div>
 								<div class="box-inner">
-									<img src="/images/dave.png">
+									<a href="https://www.linkedin.com/profile/view?id=2601023">
+										<img src="/images/dave.png" alt="David Austin">
+									</a>
 								</div>
 							</div>
 						</div>
@@ -212,6 +218,182 @@
 				</blockquote>
 			</div>
 		</section>
+		<!--<section class="section section-short has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-large hairline xsmall-margin-bottom">How It Works</h1>
+				</header>
+				<div class="row">
+					<div class="col-md-12 text-default">
+						<div class="row">
+							<ul class="list-unstyled image-list">
+								<li class="col-md-4 small-margin-top">-->
+									<!--<img src="/images/icon-clock-cogs.png" width="200" height="200" alt="Quickly Create Roadmap">-->
+									<!--<span class="init-clock">
+										<img src="/images/animations/icon-clock-cogs-no-hands2.png" width="200" height="200">
+										<img class="clock-hand" src="/images/animations/icon-clock-hand.png" height="3.5px">
+										<img class="hour-clock-hand" src="/images/animations/icon-hour-clock-hand.png" width="6px">
+									</span>
+									<div class="row">
+										<div class="col-md-10 center">
+											<h3 class="text-center font-normal text-get-smaller">Create your product roadmap in minutes</h3>
+										</div>
+									</div>
+								</li>
+								<li class="col-md-4 small-margin-top">
+									<img class="home-svg" src="/images/pencils.svg" alt="Tools to design roadmap in minutes" width="165" height="165">
+									<div class="row">
+										<div class="col-md-10 center">
+											<h3 class="text-center font-normal text-get-smaller">Color And style to match your brand</h3>
+										</div>
+									</div>
+								</li>
+								<li class="col-md-4 small-margin-top">-->
+									<!--<img src="/images/icon-imac-roadmap.png" alt="Presentation ready roadmap" width="200" height="200">-->
+									<!--<span class="init-dl">
+										<img src="/images/icon-imac-roadmap.png" width="200" height="200">
+										<span class="glyphicon glyphicon-arrow-down download"></span>
+									</span>
+									<div class="row">
+										<div class="col-md-12 center">
+											<h3 class="text-center font-normal text-get-smaller">Download your presentation-ready roadmap</h3>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
+						<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
+							<div class="cta free-trial center"></div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container-fluid">
+				<header class="section-header text-center underline medium-margin-bottom">
+					<h1 class="headline text-medium hairline xsmall-margin-bottom">Roadmaps Of All Types</h1>
+				</header>
+				<div class="row">
+					<div class="col-md-10 center">
+						<div class="row">
+							<div class="col-md-8">
+								<div class="browser">
+									<img class="bg" src="/images/browser-roadmunk.jpg">
+									<img id="sprintImg" class="screen selected-img" src="/images/sprint-roadmap.png" itemprop="screenshot" alt="Sprint Product Roadmap">
+									<img id="projectImg" class="screen" src="/images/project-roadmap.png" alt="Project Roadmap for Product Managers">
+									<img id="releaseImg" class="screen" src="/images/release-roadmap.png" alt="Release Roadmap">
+								</div>
+							</div>
+							<div class="col-md-4">
+								<ul class="list-unstyled feature-controls">
+									<li id="sprint" class="selected">
+										<span >
+											<div class="roadmap-icon sprint">
+												<span class="glyphicon glyphicon-flash"></span>
+											</div>
+											<span class="info">
+												<h3>Sprint Roadmap</h3>
+												<p class="callout">Create your short term roadmap to visualize your upcoming sprints</p>
+											</span>
+										</a>
+									</li>
+									<li id="project">
+										<span>
+											<div class="roadmap-icon project">
+												<span class="glyphicon glyphicon-briefcase"></span>
+											</div>
+											<span class="info">
+												<h3>Project Roadmap</h3>
+												<p class="callout">Provide vital status updates to your stakeholders</p>
+											</span>
+										</a>
+									</li>
+									<li id="release">
+										<span>
+											<div class="roadmap-icon release">
+												<span class="glyphicon glyphicon-globe"></span>
+											</div>
+											<span class="info">
+												<h3>Release Roadmap</h3>
+												<p class="callout">Plan out your long term releases across multiple product lines</p>
+											</span>
+										</span>
+									</li>
+								</ul>
+								<div class="row">
+									<div class="col-md-10 xsmall-margin-top small-margin-bottom center">
+										<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
+											<div class="cta small-cta center"></div>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="section section-short has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container-fluid features">
+				<header class="section-header small text-center underline">
+					<h1 class="headline text-large hairline xsmall-margin-bottom">Features</h1>
+				</header>
+				<div class="row">
+					<div class="col-md-10 center">
+						<div class="row">
+							<ul class="list-unstyled row image-list">
+								<li class="col-md-3 small-margin-top">
+									<img src="/images/binder.svg" width="225" height="225" alt="Slick Tools to help create perfect product roadmap">
+									<h3 class="text-center font-normal">Idea Management</h3>
+									<div class="col-sm-10 center">
+										<p class="callout">Import, create and priortize items in a slick UI.</p>
+									</div>
+								</li>
+								<li class="col-md-3 small-margin-top">
+									<img src="/images/microscope.svg" width="225" height="225" alt="Custom Roadmap View with drag and drop tools">
+									<h3 class="text-center font-normal">Custom Roadmap Views</h3>
+									<div class="col-sm-10 center">
+										<p class="callout">Single-click creation and powerful drag-and-drop tools.</p>
+									</div>
+								</li>
+								<li class="col-md-3 small-margin-top">
+									<img src="/images/utensils.svg" width="225" height="225" alt="Custom software with branding tools for product roadmaps">
+									<h3 class="text-center font-normal">Color Palettes &#38; Branding</h3>
+									<div class="col-sm-10 center">
+										<p class="callout">Create the deep impact on your audience.</p>
+									</div>
+								</li>
+								<li class="col-md-3 small-margin-top">
+									<img src="/images/bullet.svg" width="225" height="225">
+									<h3 class="text-center font-normal">Fit to PowerPoint</h3>
+									<div class="col-sm-10 center">
+										<p class="callout">Stop moving pixels around on a slide. Export directly to PowerPoint.</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="row">
+					<div class="col-md-10 small-margin-top xsmall-margin-bottom center">
+						<a title="Learn more about Roadmunk" href="/features">
+							<div class="cta learn-more center"></div>
+						</a>
+					</div>
+				</div>
+				</div>
+			</div>
+		</section>-->
 		<section class="section section-normal yellow has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
@@ -232,6 +414,53 @@
 				</div>
 			</div>
 		</section>
+		<!--<section class="section section-short has-top">
+			<div class="decor-top">
+				<% include ./partials/top-triangle-angle %>
+			</div>
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header text-center underline">
+					<h1 class="headline text-large xsmall-margin-bottom hairline">Our Clients</h1>
+				</header>
+				<div class="row medium-margin-bottom">
+					<div class="col-md-12">
+						<ul class="list-unstyled row image-list">
+							<li class="col-md-3">
+								<img src="http://placehold.it/150x150">
+							</li>
+							<li class="col-md-3">
+								<img src="http://placehold.it/150x150">
+							</li>
+							<li class="col-md-3">
+								<img src="http://placehold.it/150x150">
+							</li>
+							<li class="col-md-3">
+								<img src="http://placehold.it/150x150">
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>-->
+		<!--<section class="section section-normal has-top">
+			<div class="background-media"></div>
+			<div class="background-overlay"></div>
+			<div class="container">
+				<header class="section-header text-center underline">
+					<h1 class="headline text-medium hairline">See Roadmunk In Action</h1>
+					<p class="get-smaller">Start a free 14-day trial and build your roadmap in a matter of minutes.</p>
+				</header>
+				<div class="row">
+					<div class="col-lg-12 xsmall-margin-top">
+						<a title="Create my roadmap for free" href="https://app.roadmunk.com/login/#/signup">
+							<div class="cta general center"></div>
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>-->
 	</article>
 </div>
 <% include end %>
