Add underline support on scrolling

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,7 @@
 						<div id="feature_2_text" class="col-md-7 features-right">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Development</h1>
-								<p class="body-subheader features">Current studying for a degree in Honours Computer Science Brent is immersed in a development environment day in an day out. Other than work experience discussed in Brent's r&#233;sum&#233;.&#58;</p>
+								<p class="body-subheader features">Current studying for a degree in Honours Computer Science Brent is immersed in a development environment day in an day out. Other than work experience discussed in Brent's r&#233;sum&#233;, here are some of his side projects&#58;</p>
 								<ul>
 									<li>
 										<a href="http://easybadge.herokuapp.com/">
