--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,9 +15,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="featuresNav" title="Features" href="#skills">Skills</a></li>
-        <li><a title="Pricing" href="#companies">Companies</a></li>
-        <li><a id="blogNav" title="Blog" href="#testimonials">Testimonials</a></li>
+        <li><a id="skillsNav" title="Skills" href="#skills">Skills</a></li>
+        <li><a id="companiesNav" title="Companies" href="#companies">Companies</a></li>
+        <li><a id="testimonialNav" title="Blog" href="#testimonials">Testimonials</a></li>
          <li><a title="Company" href="#">Other</a></li>
          <!-- contaact -->
       </ul>
